--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "psutil>=7.1.0",
+    "rich>=14.1.0",
     "typer>=0.19.2",
 ]
